--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -16,16 +16,18 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
 
-    - name: Set up Rust
-      uses: actions/setup-rust@v1
+    - name: Install Rust toolchain
+      uses: actions-rs/toolchain@v1
       with:
-        rust-version: 'latest'
+        profile: minimal
+        toolchain: stable
+        override: true
 
-    - name: Install dependencies
-      run: cargo build --release
+    - name: Build
+      run: cargo build
 
-    - name: Run tests
-      run: cargo test --verbose
+    - name: Run Tests
+      run: cargo test
 
     - name: Upload test results
       if: failure()
