--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Build
       run: cargo build
 
-    - name: Run Tests
+    - name: Run tests
       run: cargo test
 
     - name: Upload test results
