--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,16 @@ on:
       - '**' # Matches any branch
 
 jobs:
+  fmt:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v3
+
+    - name: Check code format
+      run: cargo fmt --check
+
   test:
     runs-on: ubuntu-latest
 
